# LiDAR-Camera-Fusion

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  launch.py  launch.sh  package.xml
common/: CMakeLists.txt  static_vector.hpp  types.hpp
communication/: CMakeLists.txt  load_velodyne.cpp  load_velodyne.hpp
data_processor_node/: CMakeLists.txt
data_reader_node/: CMakeLists.txt  data_reader_node.cpp
data_types/: CMakeLists.txt
data_types/include/data_types/: cartesian_return.hpp  classification_labels.hpp  segmentation_labels.hpp  spherical_return.hpp
data_types_lib/: CMakeLists.txt
data_types_lib/include/data_types_lib/: cartesian_return.hpp  classification_labels.hpp  segmentation_labels.hpp  spherical_return.hpp
kitti_data_reader_nodes/: CMakeLists.txt  camera_frame_reader_publisher_node.cpp  filename_reader.hpp  point_cloud_reader_publisher_node.cpp  sensor_data_publisher_node.cpp  synchronization_time.hpp  timestamp_reader.hpp
launch/: launch.py
libraries/data_types_lib/: CMakeLists.txt
libraries/data_types_lib/cmake/: Config.cmake.in
libraries/data_types_lib/include/data_types_lib/: cartesian_return.hpp  reserved_clustering_label.hpp  segmentation_label.hpp  spherical_return.hpp
libraries/lidar_processing_lib/: CMakeLists.txt
libraries/lidar_processing_lib/include/lidar_processing_lib/clustering/: cartesian_dbscan.hpp  cartesian_euclidean_clusterer.hpp  i_clusterer.hpp
libraries/lidar_processing_lib/include/lidar_processing_lib/segmentation/: depth_image_segmenter.hpp  i_segmenter.hpp  ransac_segmenter.hpp
libraries/lidar_processing_lib/src/clustering/: cartesian_euclidean_clusterer.cpp
libraries/lidar_processing_lib/src/segmentation/: depth_image_segmenter.cpp  ransac_segmenter.cpp
libraries/utilities_lib/: CMakeLists.txt
libraries/utilities_lib/cmake/: Config.cmake.in
libraries/utilities_lib/include/utilities_lib/: fifo_queue.hpp  file_operations.hpp  math.hpp  tlsf_allocator.hpp
libraries/utilities_lib/src/: file_operations.cpp  thread_pool.cpp
libraries/utilities_lib/test/: test_bounded_vector.cpp  test_fifo_queue.cpp  test_tlsf_allocator.cpp
lidar_camera_fusion/data_processor_node/: package.xml
lidar_camera_fusion/sensor_data_publisher_node/: CMakeLists.txt
lidar_camera_fusion/sensor_data_publisher_node/src/: sensor_data_publisher_node.cpp
lidar_processing/: CMakeLists.txt
lidar_processing/lidar_segmentation/: CMakeLists.txt
lidar_processing/lidar_segmentation/include/lidar_segmentation/: i_segmenter.hpp  ransac_segmenter.hpp  segmentation_label.hpp
lidar_processing/lidar_segmentation/src/: ransac_segmenter.cpp
lidar_processing/segmentation/: i_segmenter.hpp  ransac_segmenter.hpp
nodes/data_processor_node/: CMakeLists.txt  package.xml
nodes/data_processor_node/config/: data_processor_node.param.yaml
nodes/data_processor_node/src/: data_processor_node.cpp
nodes/lidar_data_processor_node/: CMakeLists.txt  package.xml
nodes/lidar_data_processor_node/config/: lidar_data_processor_node.param.yaml
nodes/lidar_data_processor_node/launch/: lidar_data_processor_node.launch.py
nodes/lidar_data_processor_node/src/: lidar_data_processor_node.cpp  processing_configuration.hpp
nodes/sensor_data_publisher_node/: CMakeLists.txt  package.xml
nodes/sensor_data_publisher_node/config/: sensor_data_publisher_node.param.yaml
nodes/sensor_data_publisher_node/launch/: sensor_data_publisher_node.launch.py
nodes/sensor_data_publisher_node/src/: sensor_data_publisher_node.cpp
processing/: CMakeLists.txt  pipeline.cpp  pipeline.hpp
ros2_ws/: CMakeLists.txt
ros2_ws/src/sensor_data_publisher_node/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_data_publisher_node/launch/: sensor_data_publisher_node.launch.py
ros2_ws/src/sensor_data_publisher_node/src/: sensor_data_publisher_node.cpp
sensor_data_publisher_node/: CMakeLists.txt  sensor_data_publisher_node.cpp
utilities/: CMakeLists.txt
utilities/include/utilities/: bounded_vector.hpp  file_operations.hpp  thread_pool.hpp  tlsf_allocator.hpp
utilities/include/utilities/tlsf/: tlsf.c
utilities/src/: file_operations.cpp  thread_pool.cpp
utilities/test/: test_bounded_vector.cpp  test_thread_pool.cpp  test_tlsf_allocator.cpp
utilities_lib/: CMakeLists.txt
utilities_lib/include/utilities_lib/: bounded_vector.hpp  thread_pool.hpp
utilities_lib/test/: test_thread_pool.cpp
visualisation/: rviz2_config.rviz
visualization/: rviz2_config.rviz
