<?xml version="1.0"?>
<package format="3">
    <name>lidar_data_processor_node</name>
    <version>0.1.0</version>
    <description>A ROS2 node for processing sensor data</description>

    <maintainer email="yevgeniy.engineer@gmail.com">Yevgeniy Simonov</maintainer>
    <license>BSD 3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>utilities_lib</depend>

</package>
